--- a/res/style/style.css
+++ b/res/style/style.css
@@ -1,3 +1,7 @@
+.root {
+	-fx-background-color: white;
+}
+
 #sidebar  {
 	-fx-background-color: #bbbbff;
 	
@@ -5,7 +9,7 @@
 
 
 #sidebaritem {	
-	-fx-background-color: #bbbbff;
+	-fx-background-color: #bbf;
 	-fx-min-width: 400px;
 	-fx-min-height: 60px;
 	-fx-font-size: 2.5em;
@@ -13,4 +17,29 @@
 	-fx-padding: 0 0 0 50;
 	-fx-text-fill: black;
 }
+
+#scheduletitlebartitle {
+	-fx-font-size: 4em;
+	-fx-float: left;
+	-fx-padding: 10 50 20 70;
+	-fx-text-fill: black;	
+	
+}
+
+#scheduletitlebaraddbutton {
+		-fx-min-height: 50;
+		-fx-font-weight: 900;
+		-fx-min-width: 100;
+		-fx-background-color: blue;
+		-fx-text-fill: white;
+		-fx-font-size: 2em;
+		 -fx-background-radius: 100, 100;
+		-fx-background-insets: -1.4, 0;
+		-fx-border-radius: 30;
+		-fx-border-width: 5;
+		-fx-border-color: blue;
+		
+}
+
+
 
